--- a/source/photos.html
+++ b/source/photos.html
@@ -76,6 +76,19 @@
 	<h1 class="center">Photos from Past Events</h1>
 	<hr>
 
+	<h2 class="center">2019</h2>
+	<div class="row-fluid mbot">
+		<div class="span4">
+			<a href="e_2019cny.html" class="box_link">
+			<div class="box">
+				<p><img src="images/event_thumb/2019/2019cny.jpg" alt=""></p>
+				<h5>Chinese New Year</h5>
+				<p>Chinese New Year Dinner in NYC Chinatown</p>
+			</div>
+			</a>
+		</div>
+	</div>
+
 	<h2 class="center">2017</h2>
 	<div class="row-fluid mbot">
 		<div class="span4">
